# stris

./: .hgignore  CHANGES.md  CMakeLists.txt  CONTRIBUTE.md  CREDITS.md  GNUmakefile  INSTALL  INSTALL.md  LICENSE.md  Makefile  Makefile.clang-cl  README  README.md  STYLE.md  config.mk  icon.xcf  stris.desktop.in
apple/: Info.plist  rpath.sh
assets/: CMakeLists.txt  block.xcf
data/: panel.xcf
po/: fr.po  stris.pot
src/: CMakeLists.txt  board.c  board.h  coroutine.c  coroutine.h  joy.c  joy.h  key.h  list.c  list.h  menu.c  menu.h  menuitem.c  menuitem.h  node.c  node.h  os.c  os.h  port.h  score.c  score.h  shape.c  shape.h  sound.c  sound.h  state-dead.c  state-dead.h  state-menu.c  state-menu.h  state-mode.c  state-mode.h  state-play.c  state-play.h  state-scores.c  state-scores.h  state-settings.c  state-settings.h  state-splash.c  state-splash.h  state.c  (+15 more)
tests/: test-board.c
win/: mingw-bundledlls
